--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,14 +16,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        go-version: [ 1.17.x, 1.18.x, 1.19.x ]
+        go-version: [ 1.17.x, 1.18.x, 1.19.x, 1.20.x ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
 
