--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -20,6 +20,7 @@ linters-settings:
 linters:
   enable-all: true
   disable:
+    - deadcode
     - exhaustivestruct
     - exhaustruct
     - forbidigo
@@ -38,8 +39,10 @@ linters:
     - nolintlint # https://github.com/golangci/golangci-lint/issues/3063
     - paralleltest
     - scopelint
+    - structcheck
     - tagliatelle
     - testpackage
+    - varcheck
     - varnamelen
     - wrapcheck
 
